--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
   </style>
 </head>
 <body>
-  
-  <h1>Hello Me</h1>
 
-  Improve your front-end skills by building projects
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+  <h1>Improve your front-end skills by building projects</h1>
+
+  <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
