--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
   <h1>Improve your front-end skills by building projects</h1>
-
+  <p>Another insignificant change</p>
   <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   
   <div class="attribution">
