still trying a few things

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <h1>Improve your front-end skills by building projects</h1>
   <p>Let's see how that will work out</p>
-
+  <p>When will I finish with this thing?</p>
   <p>Another insignificant change</p>
   <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   
