Added landmarks and flexbox for centring

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 </head>
 
 <body>
-  <section class="qr-card-wrapper">
-    <img class="qr-code-image" src="images/image-qr-code.png" alt="Scan QR code">
-    <div class="qr-card-text">
-      <h1 class="qr-card-heading">Improve your front-end skills by building projects</h1>
-      <p class="qr-card-description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next
-        level</p>
-    </div>
-  </section>
+  <main>
+    <section class="qr-card-wrapper">
+      <img class="qr-code-image" src="images/image-qr-code.png" alt="Scan QR code">
+      <div class="qr-card-text">
+        <h1 class="qr-card-heading">Improve your front-end skills by building projects</h1>
+        <p class="qr-card-description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next
+          level</p>
+      </div>
+    </section>
+  </main>
   <footer>
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
     <p>Coded by <a href="https://github.com/rostyslav-nazarenko" target="_blank">Rostyslav Nazarenko</a>.</p>
