--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <main>
     <section class="qr-card-wrapper">
-      <img class="qr-code-image" src="images/image-qr-code.png" alt="Scan QR code">
+      <img class="qr-code-image" src="images/image-qr-code.png" alt="QR code to frontendmentor.io">
       <div class="qr-card-text">
         <h1 class="qr-card-heading">Improve your front-end skills by building projects</h1>
         <p class="qr-card-description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next
@@ -23,6 +23,13 @@
       </div>
     </section>
   </main>
+
+  <footer>
+    <p>
+      Challenge by <a href="https://www.frontendmentor.io">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/rostyslav-nazarenko">Rostyslav Nazarenko</a>.
+    </p>
+  </footer>
 </body>
 
 </html>
